Fixed spacing between cards

--- a/clicky-game/src/components/GameCard/style.css
+++ b/clicky-game/src/components/GameCard/style.css
@@ -4,6 +4,5 @@ img {
 }
 
 .img-container {
-  max-height: 150px;
-  width: 100%
+  border: 1px solid gray;
 }
